--- a/02_javascript/250324axios/axios01.html
+++ b/02_javascript/250324axios/axios01.html
@@ -19,24 +19,27 @@
       <button class="btn btn-primary" style="width: 80px" id="searchBtn">검색</button>
     </div>
     <div class="container">
-      <div class="results"></div>
-      <!-- pagenation -->
+      <div class="results">
+        <!-- <div>
+          <h3>Lorem ipsum dolor sit amet.</h3>
+          <p class="p-3 bg-info">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, exercitationem.
+          </p>
+        </div> -->
+      </div>
+      <div class="d-flex justify-content-center">
+        <ul class="pagination">
+          <li class="page-item">
+            <a class="page-link">Previous</a>
+          </li>
+
+          <li class="page-item">
+            <a class="page-link" href="#">Next</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <div class="d-flex justify-contents-center">
-      <ul class="pagination">
-        <li class="page-item disabled">
-          <a class="page-link">Previous</a>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item active" aria-current="page">
-          <a class="page-link" href="#">2</a>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item">
-          <a class="page-link" href="#">Next</a>
-        </li>
-      </ul>
-    </div>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.8.4/axios.min.js"
       integrity="sha512-2A1+/TAny5loNGk3RBbk11FwoKXYOMfAK6R7r4CpQH7Luz4pezqEGcfphoNzB7SM4dixUoJsKkBsB6kg+dNE2g=="
